# cufft_tests

./: CMakeLists.txt  Makefile  README.md  check_cast.cpp  compare_fft.cu  compare_fft_unfied_mem.cu  compare_fft_unfied_mem_manage_buffers.cu  compare_fft_unfied_mem_ptr.cu
